verification button text changed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2946,15 +2946,24 @@ div.dataTables_wrapper div.dataTables_paginate {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-top: 3.4375rem;
 }
 
 @media screen and (min-width: 62rem) {
   div.dataTables_wrapper div.dataTables_paginate {
     margin-top: 1.875rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
   }
 }
 
@@ -3036,12 +3045,12 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 @media screen and (min-width: 62rem) {
   .auth {
-    min-height: 100vh;
+    height: 100vh;
   }
 }
 
