--- a/scss/components/table/_table.scss
+++ b/scss/components/table/_table.scss
@@ -124,11 +124,12 @@ div.dataTables_wrapper div.dataTables_info {
 }
 
 div.dataTables_wrapper div.dataTables_paginate {
-  @include flex-end;
+  @include flex-center;
   margin-top: length(55);
 
   @include breakpoint(tab992) {
     margin-top: length(30);
+    @include flex-end;
   }
 
   .pagination {
