pagination size fix

--- a/scss/components/_components.scss
+++ b/scss/components/_components.scss
@@ -15,3 +15,5 @@
 @import 'table/table';
 @import 'authentication/authentication';
 @import 'checkbox/checkbox';
+@import 'actions/actions';
+@import 'switches/switches';
