--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -913,7 +913,7 @@ select {
 .footer {
   background: white;
   margin-left: 0rem;
-  padding: 1.5rem 2rem 1.5rem 1rem;
+  padding: 1rem;
   overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -926,10 +926,6 @@ select {
 @media screen and (min-width: 62rem) {
   .footer {
     margin-left: 13.875rem;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: calc(100% - 12.5rem);
   }
 }
 
@@ -2522,6 +2518,7 @@ select {
   transition: 0.2s ease-in-out;
   padding: 1rem;
   overflow: hidden;
+  min-height: calc(100vh - 4.75rem);
 }
 
 @media screen and (min-width: 62rem) {
@@ -2968,26 +2965,54 @@ div.dataTables_wrapper div.dataTables_paginate {
 }
 
 div.dataTables_wrapper div.dataTables_paginate .pagination {
-  border: solid 0.0625rem #dfe3e7;
-  border-radius: 0.25rem;
-  border-radius: 0.25rem;
-  gap: 0.0625rem;
   overflow: hidden;
   margin: 0 !important;
 }
 
+div.dataTables_wrapper div.dataTables_paginate .pagination .page-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: hidden;
+  height: 2.5rem;
+  width: 2.5rem;
+}
+
+div.dataTables_wrapper div.dataTables_paginate .pagination .page-item:not(:first-child) .page-link {
+  margin-left: 0;
+}
+
 div.dataTables_wrapper div.dataTables_paginate .pagination .page-item .page-link {
+  height: 2.5rem;
+  width: 2.5rem;
   border: 0;
   border-radius: 0;
-  padding: 0.5rem 1rem;
+  padding: 0rem;
   background: white;
   color: #4a65ed;
-  border-right: solid 0.0625rem #dfe3e7;
+  border: solid 0.0625rem #dfe3e7;
+  border-right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   font-family: "Inter";
   font-style: normal;
   font-size: 0.875rem;
   font-weight: normal;
-  line-height: 1.5;
+  line-height: 1.42857;
+  text-align: center;
 }
 
 div.dataTables_wrapper div.dataTables_paginate .pagination .page-item .page-link:focus {
@@ -2999,18 +3024,21 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item .page-link
 div.dataTables_wrapper div.dataTables_paginate .pagination .page-item:hover:not(.active):not(.disabled) .page-link {
   background: #4a65ed;
   color: white;
+  border-color: #4a65ed;
 }
 
 div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.active .page-link {
   background: #4a65ed;
   color: white;
+  border-color: #4a65ed;
 }
 
 div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.previous .page-link, div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page-link {
   font-size: 0;
   color: transparent;
   position: relative;
-  min-height: 2.3125rem;
+  height: 2.5rem;
+  width: 2.5rem;
 }
 
 div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.previous .page-link::before, div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page-link::before {
@@ -3023,18 +3051,29 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.previous .
 }
 
 div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.previous .page-link {
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+}
+
+div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.previous .page-link::before {
   content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%234A66ED' class='bi bi-chevron-left' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3E%3C/svg%3E");
 }
 
-div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.previous .page-link:not([disabled]):hover {
+div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.previous .page-link:not([disabled]):hover::before {
   content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23ffffff' class='bi bi-chevron-left' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3E%3C/svg%3E");
 }
 
 div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page-link {
+  border-top-right-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
+  border-right: solid 0.0625rem #dfe3e7;
+}
+
+div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page-link::before {
   content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%234A66ED' class='bi bi-chevron-right' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
 }
 
-div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page-link:not([disabled]):hover {
+div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page-link:not([disabled]):hover::before {
   content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23ffffff' class='bi bi-chevron-right' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
 }
 
@@ -3677,6 +3716,32 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
   visibility: hidden;
   -webkit-transition: all 250ms ease-in-out;
   transition: all 250ms ease-in-out;
+}
+
+.form-switch {
+  padding-left: 0;
+}
+
+.form-switch .form-check-input {
+  cursor: pointer;
+  width: 2.5rem;
+  height: 1.25rem;
+  margin: 0rem;
+  border: 0;
+  background-color: #8b93a7;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
+}
+
+.form-switch .form-check-input:checked {
+  background-color: #4a65ed;
+  border-color: #4a65ed;
+}
+
+.form-switch .form-check-input:focus {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
+  outline: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 
 /**=======================================================**
