--- a/scss/components/main/_main.scss
+++ b/scss/components/main/_main.scss
@@ -2,6 +2,7 @@
   transition: 0.2s ease-in-out;
   padding: length(16);
   overflow: hidden;
+  min-height: calc(100vh - 4.75rem);
   
   @include breakpoint(tab992) {
     margin-left: length(220);
