--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -22,12 +22,14 @@ $textdark: hsl(0, 0%, 20%); //#333333
 $iconbg: hsl(228, 33%, 97%); //#F5F6FA
 $bodybg: hsl(210, 16%, 93%); //#E9ECEF
 $inputbg: hsl(0, 0%, 97%); //#f7f7f7
+$productbg: rgba(164, 180, 242, 0.1);
 
 /**=====================================================**
                     BORDER-COLORS
 =======================================================**/
 $notificationborder: hsl(0, 0%, 93%); //#EEEEEE
 $paginstionborder: hsl(210, 14%, 89%); //#DEE2E6
+$productborder: hsl(228, 75%, 80%); //#A4B4F2
 
 /**=====================================================**
                     NORMAL-COLORS
