--- a/scss/pages/products/_products.scss
+++ b/scss/pages/products/_products.scss
@@ -127,8 +127,265 @@
   }
 
   &-body {
-    .info {
-      
+    .productdescription {
+      @include flex-column;
+      gap: length(16);
+
+      &-header {
+        .productdescription-title {
+          color: $headingtext;
+          @include font-face($primaryFont, style('normal'), size(20), weight('semibold'), line-height(35, 20));
+        }
+      }
+
+      .info {
+        @include flex-column;
+        gap: length(16);
+              
+        .inputbox {
+          @include w100;
+          @include flex-column;
+          gap: length(8);
+          position: relative;
+  
+          .inputlabel {
+            color: $textdark;
+            @include font-face($primaryFont, style('normal'), size(12), weight('normal'), line-height(16, 12));
+  
+            .required {
+              color: $danger;
+            }
+          }
+          
+          .inputfield {
+            color: $textprimary;
+            @include border(solid, 1, $textlight);
+            @include radius(4);
+            padding: length(8) length(16);
+            @include font-face($primaryFont, style('normal'), size(12), weight('normal'), line-height(16, 12));
+            @include transitionsall;
+  
+            &::after {
+              color: $textlight;
+            }
+  
+            &:focus {
+              border-color: $secondarytext;
+            }
+          }
+  
+          .selectfield {
+            color: $textprimary;
+            @include border(solid, 1, $textlight);
+            @include radius(4);
+            @include font-face($primaryFont, style('normal'), size(12), weight('normal'), line-height(16, 12));
+            padding: length(8) length(16);
+            background: $white url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16 10L12 14L8 10' stroke='%238A92A6' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A") no-repeat center right 3%;
+            appearance: none;
+            cursor: pointer;
+            @include transitionsall;
+  
+            option {
+              color: $textprimary;
+            }
+  
+            &:focus {
+              border-color: $secondarytext;
+            }
+          }
+  
+          .btn-remove {
+            position: absolute;
+            top: 72%;
+            @include transform(translateY(-50%));
+            right: length(40);
+            @include transparent-button;
+            z-index: 100;
+          }
+  
+          .review {
+            @include flex-center-vert;
+            gap: length(20);
+            height: length(33.98);
+  
+            .radiofield {
+              &:checked ~ .radiolabel {
+                &::before {
+                  border-color: $primary;
+                }
+  
+                &::after {
+                  opacity: 1;
+                  visibility: visible;
+                  background: $primary;
+                }
+              }
+            }
+  
+            .radiolabel {
+              color: $textprimary;
+              @include font-face($primaryFont, style('normal'), size(12), weight('normal'), line-height(16, 12));
+              position: relative;
+              padding-left: length(24);
+              cursor: pointer;
+  
+              &::before {
+                content: '';
+                position: absolute;
+                top: 50%;
+                left: 0;
+                @include transform(translateY(-50%));
+                @include square(length(16));
+                background: $white;
+                @include border(solid, 1, $textlight);
+                @include circle;
+                @include transitionsall;
+              }
+  
+              &::after {
+                content: '';
+                position: absolute;
+                top: 50%;
+                left: length(4);
+                @include transform(translateY(-50%));
+                @include square(length(8));
+                background: $white;
+                @include circle;
+                opacity: 0;
+                visibility: hidden;
+                @include transitionsall;
+              }
+            }
+          }
+  
+          .error-message {
+            display: none;
+            color: $danger;
+            @include font-face($primaryFont, style('normal'), size(12), weight('medium'), line-height(16.8, 12));
+          }
+  
+          &.errorfield {
+            .inputfield,
+            .selectfield {
+              border-color: $danger;
+            }
+  
+            .review {
+              .radiolabel {
+                &::before {
+                  border-color: $danger;
+                }
+              }
+            }
+  
+            .btn-remove {
+              top: 50%;
+            }
+  
+            .error-message {
+              display: block;
+            }
+          }
+        }
+      }
+    }
+
+    .productdetail {
+      @include flex-column;
+      gap: length(16);
+
+      .productimages {
+        @include flex-column;
+        gap: length(16);
+
+        &-header {
+          .productimages-title {
+            color: $headingtext;
+            @include font-face($primaryFont, style('normal'), size(20), weight('semibold'), line-height(35, 20));
+          }
+        }
+
+        &-body {
+          .product-thumbnail {
+            background: $productbg;
+            @include radius(4);
+            @include flex-center;
+            overflow: hidden;
+            padding: length(10);
+            position: relative;
+            // @include square(length(136));
+
+            // @include breakpoint(mobile414) {
+            //   @include square(length(160));
+            // }
+
+            // @include breakpoint(mobile576) {
+            //   @include square(length(245));
+            // }
+
+            img {
+              @include wh100;
+              object-fit: cover;
+            }
+
+            .btn-delete {
+              @include transparent-button;
+              position: absolute;
+              top: length(10);
+              right: length(10);
+              @include square(length(27));
+              z-index: 100;
+
+              svg {
+                @include wh100;
+              }
+            }
+          }
+
+          .upload {
+            background: $productbg;
+            @include radius(4);
+            @include flex-center-column;
+            gap: length(12);
+            padding: length(10);
+            @include border(dashed, 2, $productborder);
+            @include h100;
+            text-align: center;
+            overflow: hidden;
+            // @include square(length(136));
+
+            // @include breakpoint(mobile414) {
+            //   @include square(length(160));
+            // }
+
+            // @include breakpoint(mobile576) {
+            //   height: length(245);
+            // }
+
+            .icon {
+              @include square(length(44));
+              @include flex-center;
+              overflow: hidden;
+
+              svg {
+                @include wh100;
+              }
+            }
+
+            .uploadinfo {
+              .uploadlabel {
+                color: $textdark;
+                @include font-face($primaryFont, style('normal'), size(12), weight('normal'), line-height(16, 12));
+                cursor: pointer;
+
+                .text {
+                  color: $primary;
+                }
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
